# fluid-sim

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  kernels.rs  main.rs  physics.rs
src/cpu/: kernels.rs  mod.rs  physics.rs
src/engine/: kernels.rs  mod.rs  physics.rs  renderer.rs  search.rs  simulation.rs
src/gpu/: context.rs  mod.rs  particle.rs  pipelines.rs
src/gpu/shaders/: common.wgsl  render.wgsl  search.wgsl  update.wgsl
src/graphics/: renderer.rs
