[package]
name = "fluid-simulation"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.25.0"
colorgrad = "0.8.0"
egui-macroquad = "0.17.3"
glam = "0.32.0"
pollster = "0.4.0"
rand = "0.10.0"
rayon = "1.11.0"
wgpu = "29.0.1"
wgpu_sort = {git="https://github.com/mgtorloni/wgpu_sort.git"}
winit = "0.30.12"
